init: Add node-mailjet because of SPF, DKIM and DMARC protocols on google was overhelming.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,11 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+h1 {
+    color:lightslategrey;
+    font-size: 18pt;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-transform: uppercase;
+    margin-bottom: 8px;
+}
