--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,9 +27,26 @@ body {
 }
 
 h1 {
-    color:lightslategrey;
+    color: #6f6f6f;
+    border-bottom: 1px solid #9f9f9f;
     font-size: 18pt;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva', 'Verdana', 'sans-serif';
     text-transform: uppercase;
-    margin-bottom: 8px;
+    display: flex;
+    width: 100%;
+    justify-content: flex-end;
+    padding: 0 16px;
+    margin: 24px 0;
+}
+
+a, button {
+    color: #6f6f6f;
+    background: #f8f8f8 !important;
+    border-radius: 4px;
+    padding: 8px 16px;
+
+    &:focus, &:hover {
+        background: #999999 !important;
+        color: #fff;
+    }
 }
