--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,8 +35,7 @@ h1 {
     display: flex;
     width: 100%;
     justify-content: flex-end;
-    padding: 0 16px;
-    margin: 24px 0;
+    padding: 16px 16px 0 16px;
 }
 
 a, button {
