--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,3 +49,10 @@ a, button {
         color: #fff;
     }
 }
+
+.menu {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    padding: 16px;
+}
